2004/03/02 05:06 (+0100) kaffeetisch

	* Gnome2.pm: Document the recent API changes.

	A NEWS
	* Gnome2.pm
	* MANIFEST
	* README: Version 0.93.

2004/03/02 04:34 (+0100) kaffeetisch

	* xs/GnomeApp.xs
	* xs/GnomeAppHelper.xs
	* xs/GnomeClient.xs
	* xs/GnomeConfig.xs
	* xs/GnomeDruid.xs
	* xs/GnomeInit.xs
	* xs/GnomeModuleInfo.xs
	* xs/GnomeUIDefs.xs: Rearrange ALIAS sections to avoid unneeded
	xsubs.

2004/03/02 03:35 (+0100) kaffeetisch

	* t/GnomeConfig.t
	* t/GnomeEntry.t
	* t/GnomeIconEntry.t
	* t/GnomeIconTheme.t
	* t/GnomePasswordDialog.t
	* t/GnomeThumbnail.t
	* xs/Gnome2.xs: Stick to the new version information policy:
	Uppercase names for compile time related functions.

	* xs/GnomeAppHelper.xs: Don't use ALIAS 0 as a way to override an
	xsub's name.  Do it properly instead.

	* xs/GnomeClient.xs: Free the return value of
	gnome_client_get_global_config_prefix.

	* xs/GnomeConfig.xs: Remove a now invalid FIXME comment.

	* maps
	* t/GnomePasswordDialog.t
	* xs/GnomePasswordDialog.xs: Bind and test API that was added in
	2.5.1: set_show_username, set_show_domain, set_show_password,
	set_domain, set_readonly_domain, set_show_remember, set_remember,
	get_remember, and get_domain.

	* t/GnomePopupMenu.t
	* xs/GnomePopupMenu.xs: Change the binding for
	gnome_popup_menu_append to Gtk2::Menu::append_from.  This is
	necessary to avoid a collision with gtk_menu_append.  Applications
	using Gtk2::Menu::append and expecting to get
	gnome_popup_menu_append will have to be changed.

2004/02/15 13:32 (-0500) rwmcfa1

	* Makefile.PL, perl-Gnome2.spec.in: fixed some of the dependancies, 
	added Gnome2-VFS, Gnome2-Canvas to the spec file and the postable_rpms.

2004/02/12 19:55 (+0100) kaffeetisch

	* Gnome2.pm
	* Makefile.PL
	* README: Version 0.92.

2004/02/12 19:21 (+0100) kaffeetisch

	* t/GnomeIconTheme.t: Only test if get_search_path returned
	something defined.

	* t/GnomeProgram.t: Use properties that are not construct-only to
	work around the problem for now.
