@@ -22,6 +22,8 @@
 
 MODULE = Gnome2::Help	PACKAGE = Gnome2::Help	PREFIX = gnome_help_
 
+=for apidoc __gerror__
+=cut
 ##  gboolean gnome_help_display (const char *file_name, const char *link_id, GError **error) 
 gboolean
 gnome_help_display (class, file_name, link_id=NULL)
@@ -79,6 +81,8 @@ gnome_help_display (class, file_name, link_id=NULL)
 #	char **envp
 #	GError **error
 
+=for apidoc __gerror__
+=cut
 ##  gboolean gnome_help_display_desktop (GnomeProgram *program, const char *doc_id, const char *file_name, const char *link_id, GError **error) 
 gboolean
 gnome_help_display_desktop (class, program, doc_id, file_name, link_id=NULL)
@@ -97,6 +101,8 @@ gnome_help_display_desktop (class, program, doc_id, file_name, link_id=NULL)
 
 #if LIBGNOME_CHECK_VERSION (2,1,1)
 
+=for apidoc __gerror__
+=cut
 ##  gboolean gnome_help_display_desktop_with_env (GnomeProgram *program, const char *doc_id, const char *file_name, const char *link_id, char **envp, GError **error) 
 gboolean
 gnome_help_display_desktop_with_env (class, program, doc_id, file_name, link_id, env_ref)
