@@ -1,3 +1,9 @@
+2004/03/11 16:07 (+0100) kaffeetisch
+
+	* xs/GnomeHelp.xs
+	* xs/GnomeURL.xs: Use the new __gerror__ keyword to mark those
+	function that may croak on error.
+
 2004/03/02 05:06 (+0100) kaffeetisch
 
 	* Gnome2.pm: Document the recent API changes.
